Fix data backup facility.